parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-4.snap
---
source: parser/src/parser/parser.rs
description: "class a(b, *c, **d): pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 25,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 25,
                },
                name: "a",
                bases: [
                    Name(
                        Name {
                            node: Node {
                                start: 8,
                                end: 9,
                            },
                            id: "b",
                        },
                    ),
                    Starred(
                        Starred {
                            node: Node {
                                start: 11,
                                end: 12,
                            },
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                    id: "c",
                                },
                            ),
                        },
                    ),
                ],
                keywords: [
                    Keyword {
                        node: Node {
                            start: 15,
                            end: 17,
                        },
                        arg: None,
                        value: Name(
                            Name {
                                node: Node {
                                    start: 17,
                                    end: 18,
                                },
                                id: "d",
                            },
                        ),
                    },
                ],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 21,
                                end: 25,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [],
            },
        ),
    ],
}
