parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-5.snap
---
source: parser/src/parser/parser.rs
description: "class a(b,\nc,\nd): pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 22,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 22,
                },
                name: "a",
                bases: [
                    Name(
                        Name {
                            node: Node {
                                start: 8,
                                end: 9,
                            },
                            id: "b",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 11,
                                end: 12,
                            },
                            id: "c",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 14,
                                end: 15,
                            },
                            id: "d",
                        },
                    ),
                ],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 18,
                                end: 22,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [],
            },
        ),
    ],
}
