parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-9.snap
---
source: parser/src/parser/parser.rs
description: "class a[T, U]: pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 19,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 15,
                                end: 19,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 8,
                                end: 9,
                            },
                            name: "T",
                            bound: None,
                        },
                    ),
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 11,
                                end: 12,
                            },
                            name: "U",
                            bound: None,
                        },
                    ),
                ],
            },
        ),
    ],
}
