parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@for.py-6.snap
---
source: parser/src/parser/parser.rs
description: "async for a in b:\n    pass\n"
input_file: parser/test_data/inputs/one_liners/for.py
---
Module {
    node: Node {
        start: 0,
        end: 27,
    },
    body: [
        AsyncForStatement(
            AsyncFor {
                node: Node {
                    start: 0,
                    end: 27,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 10,
                            end: 11,
                        },
                        id: "a",
                    },
                ),
                iter: Name(
                    Name {
                        node: Node {
                            start: 15,
                            end: 16,
                        },
                        id: "b",
                    },
                ),
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 22,
                                end: 26,
                            },
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
