parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-10.snap
---
source: parser/src/parser/parser.rs
description: "async def a():\n    pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 23,
    },
    body: [
        AsyncFunctionDef(
            AsyncFunctionDef {
                node: Node {
                    start: 0,
                    end: 23,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 12,
                        end: 12,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 19,
                                end: 23,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
    ],
}
