parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-11.snap
---
source: parser/src/parser/parser.rs
description: "async def a(a, b, c): pass\n"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 27,
    },
    body: [
        AsyncFunctionDef(
            AsyncFunctionDef {
                node: Node {
                    start: 0,
                    end: 27,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 12,
                        end: 19,
                    },
                    posonlyargs: [],
                    args: [
                        Arg {
                            node: Node {
                                start: 12,
                                end: 13,
                            },
                            arg: "a",
                            annotation: None,
                        },
                        Arg {
                            node: Node {
                                start: 15,
                                end: 16,
                            },
                            arg: "b",
                            annotation: None,
                        },
                        Arg {
                            node: Node {
                                start: 18,
                                end: 19,
                            },
                            arg: "c",
                            annotation: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 22,
                                end: 26,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
}
