parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-12.snap
---
source: parser/src/parser/parser.rs
description: "def a[T](): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 16,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 16,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 9,
                        end: 9,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 12,
                                end: 16,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            name: "T",
                            bound: None,
                        },
                    ),
                ],
            },
        ),
    ],
}
